<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:fontFamily="@font/mont_bld"
            android:textStyle="bold"
            android:textSize="35sp"
            android:paddingLeft="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_prompt"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:paddingLeft="24dp"
            android:paddingTop="4dp"/>


        <com.basil.thelattice.bluetoothmessagingapp.utils.StyledEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/full_name"
            android:drawable="@drawable/person_outline"
            app:inputType="textCapWords"/>

        <com.basil.thelattice.bluetoothmessagingapp.utils.StyledEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/address"
            android:drawable="@drawable/location_outline"
            app:inputType="text"/>

        <com.basil.thelattice.bluetoothmessagingapp.utils.StyledEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/email"
            android:drawable="@drawable/email_outline"
            app:inputType="textEmailAddress"/>

        <com.basil.thelattice.bluetoothmessagingapp.utils.StyledEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/phone"
            android:drawable="@drawable/phone_outline"
            app:inputType="phone"/>

        <com.basil.thelattice.bluetoothmessagingapp.utils.StyledEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/password"
            android:drawable="@drawable/password_outline"
            app:inputType="password"/>


        <Button
            android:id="@+id/sign_up"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:background="@drawable/rounded_area"
            android:backgroundTint="@color/button_state"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"/>

            <TextView
                android:id="@+id/signin_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_sign_in"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="4dp"
                android:fontFamily="@font/mont_med"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_criteria"
            android:layout_margin="16dp"
            android:textColor="@color/grey"
            android:textSize="12sp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
